--- a/css/onepage-scroll.css
+++ b/css/onepage-scroll.css
@@ -46,14 +46,14 @@ body, .onepage-wrapper, html {
   width: 4px;
   height: 4px;
   display: block;
-  
+
 }
 .onepage-pagination li a:before{
   content: '';
   position: absolute;
   width: 6px;
   height: 6px;
-  background: rgba(0,0,0,0.85);
+  background: rgba(144, 143, 143, 0.85);
   border-radius: 10px;
   -webkit-border-radius: 10px;
   -moz-border-radius: 10px;
@@ -63,7 +63,7 @@ body, .onepage-wrapper, html {
   width: 10px;
   height: 10px;
   background: none;
-  border: 1px solid #333;
+  border: 1px solid #AFAFAF;
   margin-top: -4px;
   left: 8px;
 }
