--- a/css/style.default.css
+++ b/css/style.default.css
@@ -186,7 +186,7 @@ p.social a.email {
   border-color: rgba(231, 231, 231, 0);
 }
 #tf-menu a.navbar-brand {
-  background: url(../img/logo.png) no-repeat;
+  background: url(../img/flugel1.png) no-repeat;
   background-size:contain;
   display:block;
   height:64px !important;
@@ -194,7 +194,7 @@ p.social a.email {
   outline:none;
   text-indent:-9999px;
   width:234px;
-  
+
 }
 
 #tf-menu.navbar-default .navbar-nav > li > a {
@@ -203,9 +203,15 @@ p.social a.email {
   font-size: 12px;
   letter-spacing: 1px;
 }
-.on {
-  background-color: #222222 !important;
-  padding: 0 !important;
+.viewing-page-1 #tf-menu a.navbar-brand{
+  background: url(../img/flugel.png) no-repeat;
+  background-size:contain;
+  display:block;
+  height:64px !important;
+  margin: 0;
+  outline:none;
+  text-indent:-9999px;
+  width:234px;
 }
 .navbar-default .navbar-nav > .active > a,
 .navbar-default .navbar-nav > .active > a:hover,
@@ -230,14 +236,14 @@ p.social a.email {
 
 
 #page1 {
-    background: url('../img/contacAsesor.png') center center no-repeat;
+  background: url('../img/contacAsesor.png') center center no-repeat;
   background-size: cover;
-  color: #79756D;
+  color: #144C87;
 }
 #page1 h1,
 #page1 h2,
 #page1 h3 {
-  color: #79756D;
+  color: #144C87;
 }
 #page1 p {
   font-size: 20px;
@@ -259,14 +265,21 @@ body.disabled-onepage-scroll .onepage-wrapper section {
   height: auto;
 }
 #page2{
-  background-color: lavender;
+  background-color: #448BCF;
 }
 #page2 p{
+  font-size: 16px;
+  color: white;
+}
+#page2 .head{
   font-size: 28px;
-  color: #79756D;
+  margin-top:80px;
+}
+#asesores{
+  color:#174A80;
 }
 #page5{
-  background-color: #36465D;
+  background-color: #1C2745;
 }
 #page5 p{
   font-size: 28px;
@@ -274,7 +287,8 @@ body.disabled-onepage-scroll .onepage-wrapper section {
 }
 
 .resize{
-  height: 600px;
+  margin-top: 60px;
+  height: 550px;
   width: auto;
 }
 
@@ -355,7 +369,7 @@ body.disabled-onepage-scroll .onepage-wrapper section {
 }
 /* navbar */
 .navbar {
-  font-family: 'Roboto', sans-serif;
+font-family: 'Varela Round', sans-serif;
   min-height: 80px;
   margin-bottom: 30px;
   border-bottom: 1px solid transparent;
@@ -603,7 +617,7 @@ body.disabled-onepage-scroll .onepage-wrapper section {
 }
 /* scaffolding */
 body {
-  font-family: "Roboto", "Times New Roman", Times, serif;
+  font-family: "Varela Round", "Times New Roman", Times, serif;
   font-size: 16px;
   line-height: 1.42857143;
   color: #333333;
@@ -656,7 +670,7 @@ hr {
 /* buttons  */
 .btn {
   font-weight: normal;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Varela Round', sans-serif;
   text-transform: uppercase;
   letter-spacing: 0.08em;
   padding: 6px 12px;
@@ -736,7 +750,7 @@ fieldset[disabled] .btn-primary.active {
 }
 /* labels */
 .label {
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Varela Round', sans-serif;
   font-weight: normal;
   text-transform: uppercase;
 }
@@ -785,7 +799,7 @@ label {
   border-top: solid 1px #eeeeee;
   padding-top: 22px;
   text-transform: uppercase;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Varela Round', sans-serif;
 }
 .pager li {
   display: inline;
@@ -813,7 +827,7 @@ label {
 /* pagination */
 .pagination {
   margin: 22px 0;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Varela Round', sans-serif;
   border-radius: 0;
 }
 .pagination > li > a,
@@ -888,7 +902,7 @@ h6,
 .h4,
 .h5,
 .h6 {
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Varela Round', sans-serif;
   font-weight: 700;
   line-height: 1.3;
   color: #333333;
