--- a/app/styles/creative.css
+++ b/app/styles/creative.css
@@ -138,7 +138,7 @@ aside {
 
     .navbar-default .nav > li>a,
     .navbar-default .nav>li>a:focus {
-        color: rgba(255,255,255,.7);
+        color: #004B89;
     }
 
     .navbar-default .nav > li>a:hover,
@@ -197,8 +197,8 @@ header {
     width: 100%;
     min-height: auto;
     text-align: center;
-    color: #65737F;
-    background: url(../images/slide-1.2.svg) no-repeat;
+    color: #FFF;
+    background: url(../images/slide-1.3.svg) no-repeat;
     background-color: #CAEBFB;
     background-position: center;
     -webkit-background-size: cover;
@@ -221,6 +221,28 @@ header .header-content .header-content-inner h1 {
     font-weight: 700;
 }
 
+header .section-heading{
+    margin-top: 2em;
+    margin-bottom: 0;
+    font-size: 33px !important;
+    font-weight: 700 !important;
+    text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.14);
+}
+header .header-content a{
+    color: #FFF;
+    background-color: #4E8BB8;
+    margin-top: 4em;
+    padding: 15px 76px;
+
+}
+
+header .header-content a:hover{
+    color: #FFF;
+    background-color: #3890DB;
+
+
+}
+
 header .header-content .header-content-inner hr {
     margin: 30px auto;
 }
@@ -228,7 +250,7 @@ header .header-content .header-content-inner hr {
 header .header-content .header-content-inner p {
     margin-bottom: 50px;
     font-size: 16px;
-    font-weight: 300;
+    font-weight: 700;
     color: rgba(255,255,255,.7);
 }
 
