--- a/app/styles/creative.css
+++ b/app/styles/creative.css
@@ -11,7 +11,7 @@ body {
 }
 
 body {
-    font-family: Merriweather,'Helvetica Neue',Arial,sans-serif;
+    font-family: "Open Sans",'Helvetica Neue',Arial,sans-serif;
 }
 
 hr {
@@ -294,7 +294,7 @@ header .header-content .header-content-inner p {
     header .section-heading{
 
       margin-top: 10px;
-      font-size: 23px !important;
+      /*font-size: 23px !important;*/
 
     }
 
@@ -334,8 +334,7 @@ header .header-content .header-content-inner p {
     max-width: 400px;
     box-shadow: 0 1px 5px 0 rgba(0,0,0,.2),0 2px 2px 0 rgba(0,0,0,.14),0 3px 1px -2px rgba(0,0,0,.12);
     height: 375px;
-
-
+    border-radius: 4px;
 }
 
 .service-box p{
