--- a/app/styles/creative.css
+++ b/app/styles/creative.css
@@ -337,6 +337,10 @@ header .header-content .header-content-inner p {
     padding: 15px;
 }
 
+.bf4{
+    width: 230px !important;
+}
+
 .service-box p{
   font-size: 0.9em;
 
